# CV-Alignment-AI-Driven

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  automation.py  match_cvs.py  pyproject.toml  requirements-dev.txt  requirements.txt  skills.yaml
.github/workflows/: ci.yml
JD/: JD_Unstructured Business Data Consultant (Onshore) (2).docx
examples/: JD_Data_Analytics_Engineer.txt
examples/CVs/: Dennis_Short_CV.txt
scripts/: run-app.ps1  setup.ps1
tests/: test_match_cvs.py
